# shorten_url

./: Cargo.toml  README.md  compose.yaml  settings.yaml
fixtures/: 100_tables.sql
sql/: 000_init.sql  100_tables.sql
src/: main.rs  settings.rs
